fixed spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .nav {
-    background-color: darkgray;
-    width: 800px;
+    background-color: rgb(95, 93, 93);
+    width: 850px;
     height: 50px;
     display: flex;
     font-family: Roboto;
@@ -16,7 +16,6 @@ a{
     color: white;
     text-decoration: none;
     margin:10px;
-    
 }
 
 .nav-title{
@@ -24,4 +23,11 @@ a{
     align-items: flex-start;
     margin-right: 325px;
 }
+ul {
+    list-style-type: none;
+}
+li{
+    float:left;
+}
+
 
